[package]
name = "mc"
version = "2.0.0-beta"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
clap = "2.33.0"
structopt = "0.2.16"

[dependencies]
tokio = "0.1.22"
clap = "2.33.0"
futures = "0.1.28"
serde = "1.0.98"
serde_yaml = "0.8.9"
serde_json = "1.0.40"
serde_derive = "1.0.98"
dotenv = "0.13.0"
reqwest = "0.9.19"
structopt = "0.2.16"
log = "0.4.8"
git2 = "0.9.2"
hyper = "0.12.33"
handlebars = "2.0.0-beta.2"
run_script = "0.2.5"
dialoguer = "0.3.0"
console = "0.7.1"
glob = "0.3.0"
bollard = "0.3.3"